--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
+pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
@@ -129,7 +129,7 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+*.venv
 env/
 venv/
 ENV/
@@ -169,3 +169,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+.vscode
